# slackify

./: .gitignore  README.md  main.py  pyproject.toml  slack.py  slackify.py  spotify.py
slackify/: __init__.py  __main__.py  actions.py  args.py  commands.py  constants.py  log.py  slack.py  spotify.py  utils.py
