[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "slackify"
dynamic = ["version"]
description = "Slack integration with Spotify that shows the currently playing song in the user's status"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
scripts.slackify = "slackify:main"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.3",
]

build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.setuptools.dynamic]
version = {attr = "slackify.__version__"}

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
extend-select = ["C", "D", "E", "F", "I", "N", "T", "W"]
exclude = [
    "venv",
    "env",
    ".venv",
    ".env",
    "__init__.py",
]
select = ["C", "D", "E", "F", "I", "N", "T", "W"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
